--- a/Debut/Debut.vcxproj.filters
+++ b/Debut/Debut.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="src\Debut\Core\Time.h">
       <Filter>src\Debut\Core</Filter>
     </ClInclude>
+    <ClInclude Include="src\Debut\Core\UUID.h">
+      <Filter>src\Debut\Core</Filter>
+    </ClInclude>
     <ClInclude Include="src\Debut\Core\Window.h">
       <Filter>src\Debut\Core</Filter>
     </ClInclude>
@@ -300,7 +303,6 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\Debut\Core\UUID.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Debut\Core\Application.cpp">
@@ -313,6 +315,9 @@
       <Filter>src\Debut\Core</Filter>
     </ClCompile>
     <ClCompile Include="src\Debut\Core\Log.cpp">
+      <Filter>src\Debut\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Debut\Core\UUID.cpp">
       <Filter>src\Debut\Core</Filter>
     </ClCompile>
     <ClCompile Include="src\Debut\ImGui\ImGuiBuild.cpp">
@@ -441,18 +446,8 @@
     <ClCompile Include="vendor\imguizmo\example\imgui_widgets.cpp">
       <Filter>vendor\imguizmo\example</Filter>
     </ClCompile>
-    <ClCompile Include="vendor\imguizmo\example\main.cpp">
-      <Filter>vendor\imguizmo\example</Filter>
-    </ClCompile>
-    <ClCompile Include="vendor\imguizmo\vcpkg-example\main.cpp">
-      <Filter>vendor\imguizmo\vcpkg-example</Filter>
-    </ClCompile>
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
-    <ClCompile Include="src\Debut\Core\UUID.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="assets\shaders\line.glsl" />
   </ItemGroup>
 </Project>
