--- a/Debutant/imgui.ini
+++ b/Debutant/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,991
+Size=1280,720
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,51 +9,59 @@ Size=400,400
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,510
-Size=350,481
+Pos=0,374
+Size=174,346
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Properties]
-Pos=1570,24
-Size=350,704
+Pos=352,286
+Size=928,434
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000C,0
 
 [Window][Content browser]
 Pos=0,24
-Size=350,484
+Size=174,348
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Settings]
-Pos=1570,730
-Size=350,261
+Pos=930,532
+Size=350,188
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Viewport]
-Pos=352,76
-Size=1216,915
+Pos=176,76
+Size=174,644
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][##toolbar]
-Pos=352,24
-Size=1216,50
+Pos=176,24
+Size=174,50
 Collapsed=0
 DockId=0x00000009,0
 
+[Window][Inspector]
+Pos=352,24
+Size=928,260
+Collapsed=0
+DockId=0x0000000B,0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,53 Size=1920,967 Split=X
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=928,696 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=350,696 Split=Y Selected=0x3995E0EF
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=137,190 Size=1280,696 Split=X
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=526,696 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=174,696 Split=Y Selected=0x3995E0EF
       DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=319,348 Selected=0x3995E0EF
       DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=319,346 Selected=0x2E9237F7
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1216,696 Split=Y
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=350,696 Split=Y
       DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=607,50 HiddenTabBar=1 Selected=0xF0F70764
       DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=607,915 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=350,696 Split=Y Selected=0x54723243
-    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=350,506 Selected=0x199AB496
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=1392,696 Split=Y Selected=0x54723243
+    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=350,506 Split=Y Selected=0xE7039252
+      DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=350,362 Selected=0xE7039252
+      DockNode  ID=0x0000000C Parent=0x00000007 SizeRef=350,603 Selected=0x199AB496
     DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=350,188 Selected=0x54723243
 
