--- a/Debutant/Debutant.vcxproj.filters
+++ b/Debutant/Debutant.vcxproj.filters
@@ -20,6 +20,7 @@
       <Filter>Panels</Filter>
     </ClInclude>
     <ClInclude Include="src\Utils\EditorCache.h" />
+    <ClInclude Include="src\Panels\PropertiesPanel.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Camera\EditorCamera.cpp">
@@ -34,5 +35,6 @@
       <Filter>Panels</Filter>
     </ClCompile>
     <ClCompile Include="src\Utils\EditorCache.cpp" />
+    <ClCompile Include="src\Panels\PropertiesPanel.cpp" />
   </ItemGroup>
 </Project>
