--- a/Debutant/Debutant.vcxproj
+++ b/Debutant/Debutant.vcxproj
@@ -78,8 +78,8 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>DBT_PLATFORM_WINDOWS;DBT_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;..\Debut\vendor\glfw\include;..\Debut\vendor\glad\include;..\Debut\vendor\imgui;..\Debut\vendor\glm;..\Debut\vendor\stb_image;..\Debut\vendor\spdlog\include;..\Debut\vendor\entt\include;..\Debut\vendor\imguizmo;..\Debut\src;..\Debut\vendor\box2d\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>DBT_PLATFORM_WINDOWS;YAML_CPP_STATIC_DEFINE;DBT_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>src;..\Debut\vendor\glfw\include;..\Debut\vendor\glad\include;..\Debut\vendor\imgui;..\Debut\vendor\glm;..\Debut\vendor\stb_image;..\Debut\vendor\spdlog\include;..\Debut\vendor\entt\include;..\Debut\vendor\imguizmo;..\Debut\vendor\yaml-cpp\include;..\Debut\src;..\Debut\vendor\box2d\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -94,8 +94,8 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>DBT_PLATFORM_WINDOWS;DBT_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;..\Debut\vendor\glfw\include;..\Debut\vendor\glad\include;..\Debut\vendor\imgui;..\Debut\vendor\glm;..\Debut\vendor\stb_image;..\Debut\vendor\spdlog\include;..\Debut\vendor\entt\include;..\Debut\vendor\imguizmo;..\Debut\src;..\Debut\vendor\box2d\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>DBT_PLATFORM_WINDOWS;YAML_CPP_STATIC_DEFINE;DBT_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>src;..\Debut\vendor\glfw\include;..\Debut\vendor\glad\include;..\Debut\vendor\imgui;..\Debut\vendor\glm;..\Debut\vendor\stb_image;..\Debut\vendor\spdlog\include;..\Debut\vendor\entt\include;..\Debut\vendor\imguizmo;..\Debut\vendor\yaml-cpp\include;..\Debut\src;..\Debut\vendor\box2d\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -114,8 +114,8 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>DBT_PLATFORM_WINDOWS;DBT_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;..\Debut\vendor\glfw\include;..\Debut\vendor\glad\include;..\Debut\vendor\imgui;..\Debut\vendor\glm;..\Debut\vendor\stb_image;..\Debut\vendor\spdlog\include;..\Debut\vendor\entt\include;..\Debut\vendor\imguizmo;..\Debut\src;..\Debut\vendor\box2d\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>DBT_PLATFORM_WINDOWS;YAML_CPP_STATIC_DEFINE;DBT_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>src;..\Debut\vendor\glfw\include;..\Debut\vendor\glad\include;..\Debut\vendor\imgui;..\Debut\vendor\glm;..\Debut\vendor\stb_image;..\Debut\vendor\spdlog\include;..\Debut\vendor\entt\include;..\Debut\vendor\imguizmo;..\Debut\vendor\yaml-cpp\include;..\Debut\src;..\Debut\vendor\box2d\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -131,25 +131,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Panels\PropertiesPanel.h" />
     <ClInclude Include="src\Camera\EditorCamera.h" />
     <ClInclude Include="src\DebutantLayer.h" />
     <ClInclude Include="src\Panels\ContentBrowserPanel.h" />
+    <ClInclude Include="src\Panels\PropertiesPanel.h" />
     <ClInclude Include="src\Panels\SceneHierarchyPanel.h" />
     <ClInclude Include="src\Utils\EditorCache.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Panels\PropertiesPanel.cpp" />
     <ClCompile Include="src\Camera\EditorCamera.cpp" />
     <ClCompile Include="src\DebutantApp.cpp" />
     <ClCompile Include="src\DebutantLayer.cpp" />
     <ClCompile Include="src\Panels\ContentBrowserPanel.cpp" />
+    <ClCompile Include="src\Panels\PropertiesPanel.cpp" />
     <ClCompile Include="src\Panels\SceneHierarchyPanel.cpp" />
     <ClCompile Include="src\Utils\EditorCache.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Debut\Debut.vcxproj">
       <Project>{1995060D-85A9-2EBE-4E2B-D21DBAFE2AEF}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Debut\vendor\yaml-cpp\yaml-cpp.vcxproj">
+      <Project>{88F1A057-74BE-FB62-9DD7-E90A890331F1}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
