Fixed deserialization bug, started ImGuiUtils
- When deserializing a sprite component, a dangling Texture2D reference was used instead of asking the AssetManager to store and retrieve it
- Started ImGuiUtils to remove some bloath and have some reusable functions when designing the UI

--- a/Debut/Debut.vcxproj.filters
+++ b/Debut/Debut.vcxproj.filters
@@ -306,6 +306,7 @@
     <ClInclude Include="src\Debut\AssetManager\AssetManager.h" />
     <ClInclude Include="src\Debut\AssetManager\Asset.h" />
     <ClInclude Include="src\Debut\Physics\PhysicsMaterial2D.h" />
+    <ClInclude Include="src\Debut\ImGui\ImGuiUtils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Debut\Core\Application.cpp">
@@ -451,5 +452,6 @@
     </ClCompile>
     <ClCompile Include="src\Debut\AssetManager\AssetManager.cpp" />
     <ClCompile Include="src\Debut\Physics\PhysicsMaterial2D.cpp" />
+    <ClCompile Include="src\Debut\ImGui\ImGuiUtils.cpp" />
   </ItemGroup>
 </Project>
