--- a/Debut/Debut.vcxproj
+++ b/Debut/Debut.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="src\Debut\Events\KeyEvent.h" />
     <ClInclude Include="src\Debut\Events\MouseEvent.h" />
     <ClInclude Include="src\Debut\ImGui\ImGuiLayer.h" />
+    <ClInclude Include="src\Debut\ImGui\ImGuiUtils.h" />
     <ClInclude Include="src\Debut\Math\Math.h" />
     <ClInclude Include="src\Debut\OrthographicCameraController.h" />
     <ClInclude Include="src\Debut\Physics\PhysicsMaterial2D.h" />
@@ -232,6 +233,7 @@
     <ClCompile Include="src\Debut\Core\UUID.cpp" />
     <ClCompile Include="src\Debut\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Debut\ImGui\ImGuiLayer.cpp" />
+    <ClCompile Include="src\Debut\ImGui\ImGuiUtils.cpp" />
     <ClCompile Include="src\Debut\Math\Math.cpp" />
     <ClCompile Include="src\Debut\OrthographicCameraController.cpp" />
     <ClCompile Include="src\Debut\Physics\PhysicsMaterial2D.cpp" />
