--- a/Debutant/imgui.ini
+++ b/Debutant/imgui.ini
@@ -15,8 +15,8 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Properties]
-Pos=903,409
-Size=377,311
+Pos=766,473
+Size=514,247
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -34,34 +34,39 @@ DockId=0x00000008,0
 
 [Window][Viewport]
 Pos=352,77
-Size=549,643
+Size=412,643
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][##toolbar]
 Pos=352,24
-Size=549,51
+Size=412,51
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=903,24
-Size=377,383
+Pos=766,24
+Size=514,447
 Collapsed=0
 DockId=0x0000000B,0
 
+[Window][Dear ImGui Demo]
+Pos=407,19
+Size=550,680
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=137,190 Size=1280,696 Split=X
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=901,696 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=41,94 Size=1280,696 Split=X
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=764,696 Split=X
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=350,696 Split=Y Selected=0x3995E0EF
       DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=319,348 Selected=0x3995E0EF
       DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=319,346 Selected=0x2E9237F7
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=549,696 Split=Y
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=412,696 Split=Y
       DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=607,51 HiddenTabBar=1 Selected=0xF0F70764
       DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=607,914 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=377,696 Split=Y Selected=0x54723243
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=514,696 Split=Y Selected=0x54723243
     DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=350,506 Split=Y Selected=0xE7039252
-      DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=350,533 Selected=0xE7039252
-      DockNode  ID=0x0000000C Parent=0x00000007 SizeRef=350,432 Selected=0x199AB496
+      DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=350,621 Selected=0xE7039252
+      DockNode  ID=0x0000000C Parent=0x00000007 SizeRef=350,344 Selected=0x199AB496
     DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=350,188 Selected=0x54723243
 
