--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "Debut/vendor/box2d"]
 	path = Debut/vendor/box2d
 	url = https://github.com/erincatto/box2d
+[submodule "Debut/vendor/assimp"]
+	path = Debut/vendor/assimp
+	url = https://github.com/assimp/assimp
