--- a/Debut/Debut.vcxproj
+++ b/Debut/Debut.vcxproj
@@ -164,21 +164,19 @@
     <ClInclude Include="src\Debut\ImGui\ImGuiLayer.h" />
     <ClInclude Include="src\Debut\ImGui\ImGuiUtils.h" />
     <ClInclude Include="src\Debut\Math\Math.h" />
-    <ClInclude Include="src\Debut\OrthographicCameraController.h" />
     <ClInclude Include="src\Debut\Physics\PhysicsMaterial2D.h" />
-    <ClInclude Include="src\Debut\Renderer\Buffer.h" />
-    <ClInclude Include="src\Debut\Renderer\Camera.h" />
-    <ClInclude Include="src\Debut\Renderer\FrameBuffer.h" />
-    <ClInclude Include="src\Debut\Renderer\GraphicsContext.h" />
-    <ClInclude Include="src\Debut\Renderer\OrthographicCamera.h" />
-    <ClInclude Include="src\Debut\Renderer\RenderCommand.h" />
-    <ClInclude Include="src\Debut\Renderer\Renderer.h" />
-    <ClInclude Include="src\Debut\Renderer\Renderer2D.h" />
-    <ClInclude Include="src\Debut\Renderer\RendererAPI.h" />
-    <ClInclude Include="src\Debut\Renderer\Shader.h" />
-    <ClInclude Include="src\Debut\Renderer\SubTexture2D.h" />
-    <ClInclude Include="src\Debut\Renderer\Texture.h" />
-    <ClInclude Include="src\Debut\Renderer\VertexArray.h" />
+    <ClInclude Include="src\Debut\Rendering\Camera.h" />
+    <ClInclude Include="src\Debut\Rendering\GraphicsContext.h" />
+    <ClInclude Include="src\Debut\Rendering\Renderer\RenderCommand.h" />
+    <ClInclude Include="src\Debut\Rendering\Renderer\Renderer.h" />
+    <ClInclude Include="src\Debut\Rendering\Renderer\Renderer2D.h" />
+    <ClInclude Include="src\Debut\Rendering\Renderer\RendererAPI.h" />
+    <ClInclude Include="src\Debut\Rendering\Shader.h" />
+    <ClInclude Include="src\Debut\Rendering\Structures\Buffer.h" />
+    <ClInclude Include="src\Debut\Rendering\Structures\FrameBuffer.h" />
+    <ClInclude Include="src\Debut\Rendering\Structures\VertexArray.h" />
+    <ClInclude Include="src\Debut\Rendering\SubTexture2D.h" />
+    <ClInclude Include="src\Debut\Rendering\Texture.h" />
     <ClInclude Include="src\Debut\Scene\Components.h" />
     <ClInclude Include="src\Debut\Scene\Entity.h" />
     <ClInclude Include="src\Debut\Scene\Scene.h" />
@@ -235,19 +233,17 @@
     <ClCompile Include="src\Debut\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\Debut\ImGui\ImGuiUtils.cpp" />
     <ClCompile Include="src\Debut\Math\Math.cpp" />
-    <ClCompile Include="src\Debut\OrthographicCameraController.cpp" />
     <ClCompile Include="src\Debut\Physics\PhysicsMaterial2D.cpp" />
-    <ClCompile Include="src\Debut\Renderer\Buffer.cpp" />
-    <ClCompile Include="src\Debut\Renderer\FrameBuffer.cpp" />
-    <ClCompile Include="src\Debut\Renderer\OrthographicCamera.cpp" />
-    <ClCompile Include="src\Debut\Renderer\RenderCommand.cpp" />
-    <ClCompile Include="src\Debut\Renderer\Renderer.cpp" />
-    <ClCompile Include="src\Debut\Renderer\Renderer2D.cpp" />
-    <ClCompile Include="src\Debut\Renderer\RendererAPI.cpp" />
-    <ClCompile Include="src\Debut\Renderer\Shader.cpp" />
-    <ClCompile Include="src\Debut\Renderer\SubTexture2D.cpp" />
-    <ClCompile Include="src\Debut\Renderer\Texture.cpp" />
-    <ClCompile Include="src\Debut\Renderer\VertexArray.cpp" />
+    <ClCompile Include="src\Debut\Rendering\Renderer\RenderCommand.cpp" />
+    <ClCompile Include="src\Debut\Rendering\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Debut\Rendering\Renderer\Renderer2D.cpp" />
+    <ClCompile Include="src\Debut\Rendering\Renderer\RendererAPI.cpp" />
+    <ClCompile Include="src\Debut\Rendering\Shader.cpp" />
+    <ClCompile Include="src\Debut\Rendering\Structures\Buffer.cpp" />
+    <ClCompile Include="src\Debut\Rendering\Structures\FrameBuffer.cpp" />
+    <ClCompile Include="src\Debut\Rendering\Structures\VertexArray.cpp" />
+    <ClCompile Include="src\Debut\Rendering\SubTexture2D.cpp" />
+    <ClCompile Include="src\Debut\Rendering\Texture.cpp" />
     <ClCompile Include="src\Debut\Scene\Entity.cpp" />
     <ClCompile Include="src\Debut\Scene\Scene.cpp" />
     <ClCompile Include="src\Debut\Scene\SceneCamera.cpp" />
