Started material properties
Added Texture bindings in materials, will have to add other data types (vectors, int, float, bool).

--- a/Debut/Debut.vcxproj
+++ b/Debut/Debut.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="src\Debut\Utils\CppUtils.h" />
     <ClInclude Include="src\Debut\Utils\PlatformUtils.h" />
     <ClInclude Include="src\Debut\dbtpch.h" />
+    <ClInclude Include="src\Debut\Utils\YamlUtils.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLError.h" />
