Continued material properties
Missing saving the material.

--- a/Debut/Debut.vcxproj.filters
+++ b/Debut/Debut.vcxproj.filters
@@ -474,4 +474,7 @@
     </ClCompile>
     <ClCompile Include="src\Debut\Rendering\Material.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\shaders\temp.glsl" />
+  </ItemGroup>
 </Project>
